# brokerService/openapi.yaml
@@ -1,7 +1,147 @@
-openapi: 3.0.3
+openapi: 3.1.0
 info:
+  title: Broker Service
+  description: A message retrieval API for the ADS-B RESTful Data Exchange
   version: 1.0.0
-  title: ADS-B RESTful Data Exchange Broker API
-  description: API documentation for the ADS-B RESTful Data Exchange Broker Service
-servers:
-  - url: http://localhost:3000
+
+paths:
+  /message/ads:
+    get:
+      summary: Get all messages
+      description: Retrieves all ads messages from the database.
+      tags:
+        - Messages
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetMessagesResponse"
+              example:
+                $ref: "#/components/examples/GetMessagesResponseExample"
+        500:
+          description: Server Error
+
+  /message/ads/latest:
+    get:
+      summary: Get latest messages
+      description: Retrieves the 10 latest ads messages from the database.
+      tags:
+        - Messages
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetMessagesResponse"
+              example:
+                $ref: "#/components/examples/GetMessagesResponseExample"
+        500:
+          description: Server Error
+
+  /message/ads/time:
+    post:
+      summary: Get messages within range
+      description: Retrieves all ads messages within given range from the database.
+      tags:
+        - Messages
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/GetMessagesByTimeRequest"
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetMessagesResponse"
+              example:
+                $ref: "#/components/examples/GetMessagesResponseExample"
+        500:
+          description: Server Error
+
+components:
+  schemas:
+    Message:
+      type: object
+      properties:
+        _id:
+          $ref: "#/components/schemas/Id"
+        macAddress:
+          $ref: "#/components/schemas/MacAddress"
+        data:
+          $ref: "#/components/schemas/Data"
+        timestamp:
+          $ref: "#/components/schemas/Timestamp"
+
+    Id:
+      description: Unique identifier for a message.
+      type: string
+      format: objectId
+      examples:
+        - 60d2f1f3b3c5e25d12d34abc
+
+    MacAddress:
+      description: The macAddress of the recieving device.
+      type: string
+      examples:
+        - 01:a2:b3:c4:d5:e6
+
+    Data:
+       description: Raw binary buffer, base64-encoded
+       type: string
+       format: byte
+       examples:
+         - "qpFHKh/PmOUAEREECr+yv7K+LSdjHKmgywrTMAbwAAK0wAAAJAAAAAAAAAns="
+                                                                                                                                          
+    Timestamp:
+      description: ISO timestamp of when the message was received.
+      type: string
+      format: date-time
+      examples:
+        - "2025-04-07T16:45:00Z"
+
+    GetMessagesResponse:
+      description: List of all messages.
+      type: array
+      items:
+        $ref: "#/components/schemas/Message"
+
+    GetMessagesByTimeRequest:
+      description: Request payload for message retrieval time range.
+      properties:
+        start:
+          type: string
+          format: date-time
+          examples:
+            - "2025-04-07T00:00:00Z"
+        end:
+          type: string
+          format: date-time
+          examples:
+            - "2025-04-07T23:59:59Z"
+      required:
+          - start
+          - end
+
+  examples:
+    GetMessagesResponseExample:
+      value:
+        messages:
+          - _id: "60d2f1f3b3c5e25d12d34abc"
+            macAddress: "01:a2:b3:c4:d5:e6"
+            data: "qpFHKh/PmOUAEREECr+yv7K+LSdjHKmgywrTMAbwAAK0wAAAJAAAAAAAAAns="
+            timestamp: "2025-04-07T16:45:00Z"
+          - _id: "60d2f1f3b3c5e25d12d34abd"
+            macAddress: "de:ad:be:ef:12:34"
+            data: "YW5vdGhlckV4YW1wbGVCdWZmZXI="
+            timestamp: "2025-04-07T16:46:00Z"
+tags:
+  - name: Message
+    x-displayName: Message Retrieval
+    description: Retrieve messages in the data exchange.
